fix: hibernate 缓存时，执行克隆